--- a/properties.yml
+++ b/properties.yml
@@ -1,12 +1,6 @@
-initialXTicks : 1000
-initialYTicks : 1000
 a : 10
-canvasSizeX : 846
-canvasSizeY : 1200
-linearVelocity : 15000
-maxV : 250
+canvas_size_x : 846
+linear_velocity : 15000
 radius : 7.95
-stepsPerRound : 200
-tickSize : 0.000250
-maxSegmentLength : 10
-changeDirectionThreshhold : 0.2
+max_segment_length : 10
+change_direction_threshhold : 0.2
