--- a/properties.yml
+++ b/properties.yml
@@ -1,6 +1,7 @@
 canvas_size_x : 1200.0
 linear_velocity : 12000.0
-max_segment_length : 20
+ff_velocity : 16000.0
+max_segment_length : 10
 initial_x : 550.0
 initial_y : 500.0
 dx : 60.0
