--- a/properties.yml
+++ b/properties.yml
@@ -4,5 +4,9 @@ ff_velocity : 30000.0
 max_segment_length : 10
 initial_x : 2000.0
 initial_y : 2000.0
+crop_x : 30
+crop_y : 30
+crop_w : 1000
+crop_h : 1000
 dx : 0
 dy : 0
