--- a/properties.yml
+++ b/properties.yml
@@ -1,12 +1,18 @@
-canvas_size_x : 6096.0 #ширина холста
-linear_velocity : 30000.0 #линейная скорость окраски, мм/мин, g01
-ff_velocity : 30000.0 #линейная скорость холостого хода, мм/мин, g00
-max_segment_length : 51 #точность апроксимации, мм
+canvas_size_x : 6096.0 # ширина холста
+linear_velocity : 30000.0 # линейная скорость окраски, мм/мин, g01
+ff_velocity : 30000.0 # линейная скорость холостого хода, мм/мин, g00
+max_segment_length : 1000.0 # точность апроксимации, мм
+z_turn : 10 # поворот оси z для начала окраски, мм
+#
 initial_x : 3500.0 # начальная длина левого ремня, мм
 initial_y : 3500.0 # начальная длина правого ремня, мм
-crop_x : 100 #
-crop_y : 100 #
-crop_w : 800 #
-crop_h : 1400 #
+#
+crop_x : 100 # левый верхний угол для обрезки
+crop_y : 100 # левый верхний угол для обрезки
+crop_w : 800 # ширина прямоугольника обрезки
+crop_h : 1400 # высота прямоугольника обрезки
+#
+move_x : 101 # смещеине рисунка, если надо
+move_y : 102 # смещеине рисунка, если надо
+#
 max_spray_length : 100000.0 # длина окраски одним баллончиком краски, мм
-z_turn : 10 #поворот оси z для начала окраски, мм
