--- a/properties.yml
+++ b/properties.yml
@@ -1,18 +1,18 @@
 canvas_size_x : 6096.0 # ширина холста
 linear_velocity : 30000.0 # линейная скорость окраски, мм/мин, g01
 ff_velocity : 30000.0 # линейная скорость холостого хода, мм/мин, g00
-max_segment_length : 1000.0 # точность апроксимации, мм
+max_segment_length : 10.0 # точность апроксимации, мм
 z_turn : 10 # поворот оси z для начала окраски, мм
 #
 initial_x : 3500.0 # начальная длина левого ремня, мм
-initial_y : 3500.0 # начальная длина правого ремня, мм
+initial_y : 1500.0 # начальная длина правого ремня, мм
 #
-crop_x : 100 # левый верхний угол для обрезки
-crop_y : 100 # левый верхний угол для обрезки
-crop_w : 800 # ширина прямоугольника обрезки
-crop_h : 1400 # высота прямоугольника обрезки
+crop_x : 0 # левый верхний угол для обрезки
+crop_y : 400 # левый верхний угол для обрезки
+crop_w : 5800 # ширина прямоугольника обрезки
+crop_h : 1700 # высота прямоугольника обрезки
 #
-move_x : 101 # смещеине рисунка, если надо
-move_y : 102 # смещеине рисунка, если надо
+move_x : 100 # смещение рисунка, если надо
+move_y : 100 # смещение рисунка, если надо
 #
 max_spray_length : 100000.0 # длина окраски одним баллончиком краски, мм
